--- a/.github/workflows/envato-crawl.yml
+++ b/.github/workflows/envato-crawl.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Setting Up Envato API
         run: |
           cd scripts/envato-api && composer install --no-dev
-          php scripts/envato-api/app.php
+          php app.php
